# Convolutional-transformed-Transformer-API

./: Makefile  README.md  REPO_NOTES.md  USAGE_NOTES.md  convolutional_transform_transformer_smoke_test.py  pyproject.toml
.gitignore/workflows/: smoke.yml
docs/: ARCHITECTURE.md
examples/: decoder_only_api_demo.py  encoder_decoder_api_demo.py  minibert_api_demo.py  minibert_smoke_demo.py  minislm_encdec_api_demo.py  minislm_smoke_demo.py  quickstart_api.py  seq2seq_smoke_demo.py  smoke_demo.py
notebooks/: showcase_walkthrough.ipynb
results/api_decoder_only_full_suite/: all_experiments_per_seed.csv  all_experiments_summary.csv  all_experiments_summary.json  baseline_per_seed.csv  baseline_summary.json  corruption_per_seed.csv  corruption_summary.json  low_data_per_seed.csv  low_data_summary.json
results/api_encoder_decoder_full_suite/: all_experiments_per_seed.csv  all_experiments_summary.csv  all_experiments_summary.json  baseline_per_seed.csv  baseline_summary.json  corruption_per_seed.csv  corruption_summary.json  low_data_per_seed.csv  low_data_summary.json
results/demo/: baseline_per_seed.csv  baseline_summary.json
results/minibert_full_suite/: all_experiments_per_seed.csv  all_experiments_summary.csv  all_experiments_summary.json
results/minibert_standard_vs_conv/: per_seed.csv  summary.csv  summary.json
results/minislm_encdec_demo/: per_seed.csv  (+2 more)
tests/: test_attention_masks.py  test_config_and_api.py  test_decoder_only_api.py  test_encoder_decoder_api.py  test_minibert.py  test_minislm.py  test_seq2seq.py  test_smoke.py  test_text_seq2seq_lm.py
(+71 files in other folders)
